--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,12 @@
 // src/pages/index.astro
 import BaseLayout from '../layouts/BaseLayout.astro';
 ---
+import '../components/json-pretty-printer/json-pretty-printer.js';
+---
+
+<json-pretty-printer></json-pretty-printer>
+
+---
 <BaseLayout title="Home - My Profile">
     <p>Welcome to my personal web profile!</p>
     <p>This site is built with Astro and hosts various interactive apps.</p>
